<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_media">

    <fragment
        android:id="@+id/nav_media"
        android:name="com.justuju.shred.UI.Home.HomeFragment"
        android:label="@string/shreddit_title"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.justuju.shred.UI.ContactUs.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.justuju.shred.UI.About.AboutUsFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_aboutus"/>
</navigation>